# ut-jira-helper

./: .gitignore  README.md  SETUP.md
backend/: .env.example  poetry-commands.md  pyproject.toml  requirements.txt  run.py
backend/app/: config.py  main.py
backend/app/api/: conversation.py  jql.py  tasks.py
backend/app/models/: conversation.py  jql.py  task.py
backend/app/services/: jira_service.py  jql_service.py  llm_service.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
frontend/src/components/: ChartWidget.js  Dashboard.js  Header.js  IssuesPage.js  JiraTaskList.js  SearchWidget.js  TaskListWidget.js  TaskSummaryWidget.js  Widget.js
frontend/src/utils/: conversationalHelper.js
